--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sweetalert": "^2.1.2"
   }
 }
